--- a/content/resources/18-330s12.md
+++ b/content/resources/18-330s12.md
@@ -3,7 +3,7 @@ content_type: resource
 description: "Four of the Riemann summation methods for approximating the area under\
   \ curves. \xA9 Wikipedia. License CC BY-SA. This content is excluded from our Creative\
   \ Commons license. For more information, see http://ocw.mit.edu/fairuse."
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/18-330-introduction-to-numerical-analysis-spring-2012/5df8aa2c10fe1b90737c9f0e747b0f70_18-330s12.jpg
+file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/5df8aa2c10fe1b90737c9f0e747b0f70_18-330s12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Four of the Riemann summation methods for approximating the area under\
@@ -13,6 +13,8 @@ image_metadata:
     \ Commons license. For more information, see http://ocw.mit.edu/fairuse."
   image-alt: Four color graphs (red, green blue, and yellow) with a fifth graph in
     the center showing the combined results.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 18-330s12.jpg
 uid: 5df8aa2c-10fe-1b90-737c-9f0e747b0f70
