--- a/content/resources/mit18_330s12_hw3.md
+++ b/content/resources/mit18_330s12_hw3.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 3.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/18-330-introduction-to-numerical-analysis-spring-2012/af2090d51cf979f4d5e4fab49bff43f6_MIT18_330S12_hw3.pdf
+file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/af2090d51cf979f4d5e4fab49bff43f6_MIT18_330S12_hw3.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 3
 uid: af2090d5-1cf9-79f4-d5e4-fab49bff43f6
