--- a/content/resources/mit18_330s12_hw4.md
+++ b/content/resources/mit18_330s12_hw4.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 4.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/18-330-introduction-to-numerical-analysis-spring-2012/56b9a1dbc4e47099162c153d5ce14a89_MIT18_330S12_hw4.pdf
+file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/56b9a1dbc4e47099162c153d5ce14a89_MIT18_330S12_hw4.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 4
 uid: 56b9a1db-c4e4-7099-162c-153d5ce14a89
