--- a/content/resources/mit18_330s12_hw5.md
+++ b/content/resources/mit18_330s12_hw5.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 5.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/18-330-introduction-to-numerical-analysis-spring-2012/4b9f35cc97a5b9edaae48781162b641c_MIT18_330S12_hw5.pdf
+file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/4b9f35cc97a5b9edaae48781162b641c_MIT18_330S12_hw5.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 5
 uid: 4b9f35cc-97a5-b9ed-aae4-8781162b641c
