--- a/content/resources/mit18_330s12_hw7.md
+++ b/content/resources/mit18_330s12_hw7.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 7.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/18-330-introduction-to-numerical-analysis-spring-2012/f279d51c2bc4d19011e1ee42701a55cd_MIT18_330S12_hw7.pdf
+file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/f279d51c2bc4d19011e1ee42701a55cd_MIT18_330S12_hw7.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 7
 uid: f279d51c-2bc4-d190-11e1-ee42701a55cd
