--- a/content/resources/mit18_330s12_hw2.md
+++ b/content/resources/mit18_330s12_hw2.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 62c3dd0c-9fa2-f59f-423a-a00c508a8f16
 resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 2
 uid: 3e0602e8-a592-acee-0ee8-a8a10ecdae84
