--- a/content/resources/mit18_330s12_hw4.md
+++ b/content/resources/mit18_330s12_hw4.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 62c3dd0c-9fa2-f59f-423a-a00c508a8f16
 resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 4
 uid: 56b9a1db-c4e4-7099-162c-153d5ce14a89
