--- a/content/resources/mit18_330s12_hw6.md
+++ b/content/resources/mit18_330s12_hw6.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 62c3dd0c-9fa2-f59f-423a-a00c508a8f16
 resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 6
 uid: 28d3c9b9-2505-167a-2383-2f5e9c1d11d1
