--- a/content/resources/18-330s12-th.md
+++ b/content/resources/18-330s12-th.md
@@ -3,7 +3,7 @@ content_type: resource
 description: "Four of the Riemann summation methods for approximating the area under\
   \ curves. \xA9 Wikipedia. License CC BY-SA. This content is excluded from our Creative\
   \ Commons license. For more information, see http://ocw.mit.edu/fairuse."
-file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/11b7a7acedf856665930a81fdeda4c42_18-330s12-th.jpg
+file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/11b7a7acedf856665930a81fdeda4c42_18-330s12-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Four of the Riemann summation methods for approximating the area under\
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 18-330s12-th.jpg
 uid: 11b7a7ac-edf8-5666-5930-a81fdeda4c42
 ---
+Four of the Riemann summation methods for approximating the area under curves. © Wikipedia. License CC BY-SA. This content is excluded from our Creative Commons license. For more information, see http://ocw.mit.edu/fairuse.
+
