--- a/content/resources/18-330s12.md
+++ b/content/resources/18-330s12.md
@@ -3,7 +3,7 @@ content_type: resource
 description: "Four of the Riemann summation methods for approximating the area under\
   \ curves. \xA9 Wikipedia. License CC BY-SA. This content is excluded from our Creative\
   \ Commons license. For more information, see http://ocw.mit.edu/fairuse."
-file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/5df8aa2c10fe1b90737c9f0e747b0f70_18-330s12.jpg
+file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/5df8aa2c10fe1b90737c9f0e747b0f70_18-330s12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Four of the Riemann summation methods for approximating the area under\
@@ -19,3 +19,5 @@ resourcetype: Image
 title: 18-330s12.jpg
 uid: 5df8aa2c-10fe-1b90-737c-9f0e747b0f70
 ---
+Four of the Riemann summation methods for approximating the area under curves. © Wikipedia. License CC BY-SA. This content is excluded from our Creative Commons license. For more information, see http://ocw.mit.edu/fairuse.
+
