--- a/content/resources/mit18_330s12_hw1.md
+++ b/content/resources/mit18_330s12_hw1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 1.
-file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/d8531883a96517b39f1b6640fa983d65_MIT18_330S12_hw1.pdf
+file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/d8531883a96517b39f1b6640fa983d65_MIT18_330S12_hw1.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 1
 uid: d8531883-a965-17b3-9f1b-6640fa983d65
 ---
+This file contains information regarding Assignment 1.
+
