--- a/content/resources/mit18_330s12_hw2.md
+++ b/content/resources/mit18_330s12_hw2.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 2.
-file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/3e0602e8a592acee0ee8a8a10ecdae84_MIT18_330S12_hw2.pdf
+file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/3e0602e8a592acee0ee8a8a10ecdae84_MIT18_330S12_hw2.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 2
 uid: 3e0602e8-a592-acee-0ee8-a8a10ecdae84
 ---
+This file contains information regarding Assignment 2.
+
