--- a/content/resources/mit18_330s12_hw5.md
+++ b/content/resources/mit18_330s12_hw5.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 5.
-file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/4b9f35cc97a5b9edaae48781162b641c_MIT18_330S12_hw5.pdf
+file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/4b9f35cc97a5b9edaae48781162b641c_MIT18_330S12_hw5.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 5
 uid: 4b9f35cc-97a5-b9ed-aae4-8781162b641c
 ---
+This file contains information regarding Assignment 5.
+
