--- a/content/resources/mit18_330s12_hw6.md
+++ b/content/resources/mit18_330s12_hw6.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 6.
-file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/28d3c9b92505167a23832f5e9c1d11d1_MIT18_330S12_hw6.pdf
+file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/28d3c9b92505167a23832f5e9c1d11d1_MIT18_330S12_hw6.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 6
 uid: 28d3c9b9-2505-167a-2383-2f5e9c1d11d1
 ---
+This file contains information regarding Assignment 6.
+
