--- a/content/resources/mit18_330s12_hw7.md
+++ b/content/resources/mit18_330s12_hw7.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 7.
-file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/f279d51c2bc4d19011e1ee42701a55cd_MIT18_330S12_hw7.pdf
+file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/f279d51c2bc4d19011e1ee42701a55cd_MIT18_330S12_hw7.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 7
 uid: f279d51c-2bc4-d190-11e1-ee42701a55cd
 ---
+This file contains information regarding Assignment 7.
+
