--- a/content/resources/mit18_330s12_hw8.md
+++ b/content/resources/mit18_330s12_hw8.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This file contains information regarding Assignment 8.
-file: /media/courses/18-330-introduction-to-numerical-analysis-spring-2012/a32080ee28adf6e7bf6dcbb462eccce4_MIT18_330S12_hw8.pdf
+file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/a32080ee28adf6e7bf6dcbb462eccce4_MIT18_330S12_hw8.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: Introduction to Numerical Analysis Assignment 8
 uid: a32080ee-28ad-f6e7-bf6d-cbb462eccce4
 ---
+This file contains information regarding Assignment 8.
+
