--- a/content/resources/mit18_330s12_hw4.md
+++ b/content/resources/mit18_330s12_hw4.md
@@ -5,6 +5,7 @@ file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/56b9a1dbc4e
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Introduction to Numerical Analysis Assignment 4
 uid: 56b9a1db-c4e4-7099-162c-153d5ce14a89
 ---
 This file contains information regarding Assignment 4.
-
