--- a/content/resources/mit18_330s12_hw5.md
+++ b/content/resources/mit18_330s12_hw5.md
@@ -5,6 +5,7 @@ file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/4b9f35cc97a
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Introduction to Numerical Analysis Assignment 5
 uid: 4b9f35cc-97a5-b9ed-aae4-8781162b641c
 ---
 This file contains information regarding Assignment 5.
-
