--- a/content/resources/mit18_330s12_hw6.md
+++ b/content/resources/mit18_330s12_hw6.md
@@ -5,6 +5,7 @@ file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/28d3c9b9250
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Introduction to Numerical Analysis Assignment 6
 uid: 28d3c9b9-2505-167a-2383-2f5e9c1d11d1
 ---
 This file contains information regarding Assignment 6.
-
