--- a/content/resources/mit18_330s12_hw7.md
+++ b/content/resources/mit18_330s12_hw7.md
@@ -5,6 +5,7 @@ file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/f279d51c2bc
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Introduction to Numerical Analysis Assignment 7
 uid: f279d51c-2bc4-d190-11e1-ee42701a55cd
 ---
 This file contains information regarding Assignment 7.
-
