--- a/content/resources/18-330s12-th.md
+++ b/content/resources/18-330s12-th.md
@@ -14,10 +14,10 @@ image_metadata:
   image-alt: Four color graphs (red, green blue, and yellow) with a fifth graph in
     the center showing the combined results.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 18-330s12-th.jpg
 uid: 11b7a7ac-edf8-5666-5930-a81fdeda4c42
 ---
 Four of the Riemann summation methods for approximating the area under curves. © Wikipedia. License CC BY-SA. This content is excluded from our Creative Commons license. For more information, see http://ocw.mit.edu/fairuse.
-
