--- a/content/resources/mit18_330s12_hw1.md
+++ b/content/resources/mit18_330s12_hw1.md
@@ -5,6 +5,7 @@ file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/d8531883a96
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Introduction to Numerical Analysis Assignment 1
 uid: d8531883-a965-17b3-9f1b-6640fa983d65
 ---
 This file contains information regarding Assignment 1.
-
