--- a/content/resources/mit18_330s12_hw2.md
+++ b/content/resources/mit18_330s12_hw2.md
@@ -5,6 +5,7 @@ file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/3e0602e8a59
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Introduction to Numerical Analysis Assignment 2
 uid: 3e0602e8-a592-acee-0ee8-a8a10ecdae84
 ---
 This file contains information regarding Assignment 2.
-
