--- a/content/resources/mit18_330s12_hw3.md
+++ b/content/resources/mit18_330s12_hw3.md
@@ -5,6 +5,7 @@ file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/af2090d51cf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Introduction to Numerical Analysis Assignment 3
 uid: af2090d5-1cf9-79f4-d5e4-fab49bff43f6
 ---
 This file contains information regarding Assignment 3.
-
