--- a/content/resources/mit18_330s12_hw8.md
+++ b/content/resources/mit18_330s12_hw8.md
@@ -5,6 +5,7 @@ file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/a32080ee28a
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Introduction to Numerical Analysis Assignment 8
 uid: a32080ee-28ad-f6e7-bf6d-cbb462eccce4
 ---
 This file contains information regarding Assignment 8.
-
