Sync all content

--- a/content/resources/18-330s12-th.md
+++ b/content/resources/18-330s12-th.md
@@ -4,6 +4,7 @@ description: "Four of the Riemann summation methods for approximating the area u
   \ curves. \xA9 Wikipedia. License CC BY-SA. This content is excluded from our Creative\
   \ Commons license. For more information, see http://ocw.mit.edu/fairuse."
 file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/11b7a7acedf856665930a81fdeda4c42_18-330s12-th.jpg
+file_size: 10535
 file_type: image/jpeg
 image_metadata:
   caption: "Four of the Riemann summation methods for approximating the area under\
