--- a/content/resources/mit18_330s12_hw7.md
+++ b/content/resources/mit18_330s12_hw7.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This file contains information regarding Assignment 7.
 file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/f279d51c2bc4d19011e1ee42701a55cd_MIT18_330S12_hw7.pdf
+file_size: 82888
 file_type: application/pdf
 learning_resource_types:
 - Assignments
