--- a/content/resources/mit18_330s12_hw8.md
+++ b/content/resources/mit18_330s12_hw8.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This file contains information regarding Assignment 8.
 file: /courses/18-330-introduction-to-numerical-analysis-spring-2012/a32080ee28adf6e7bf6dcbb462eccce4_MIT18_330S12_hw8.pdf
+file_size: 76915
 file_type: application/pdf
 learning_resource_types:
 - Assignments
